# Worldflow_Core

./: .env  .gitattributes  .gitignore  .md  AGENTS.md  Cargo.toml  IDEA_NOTE_FEATURE.md  LICENSE  Readme.md  Snapshot.md  优化历程.md
.claude/: settings.local.json
docs/: Snapshot.md  backend_frontend_interaction.md  interface_changes_audit_fix.md  优化历程.md
migrations/: 0001_init.sql  0002_add_summary.sql  0002_entry_links.sql  0002_uuid_bin16.sql  0003_idea_notes.sql  0004_api_usage_log.sql  0005_entries_fts_summary.sql  0006_project_settings.sql
migrations_pg/: 0001_init.sql  0002_entry_links.sql  0002_uuid_native.sql  0003_entries_composite_indexes.sql  0003_idea_notes.sql
src/: error.rs  lib.rs
src/db/: api_usage.rs  app_setting.rs  category.rs  csv_bundle.rs  entry.rs  entry_link.rs  entry_relation.rs  entry_type.rs  idea_note.rs  mod.rs  pg_category.rs  pg_entry.rs  pg_entry_link.rs  pg_entry_relation.rs  pg_entry_type.rs  pg_idea_note.rs  pg_project.rs  pg_tag_schema.rs  project.rs  project_setting.rs  snapshot.rs  tag_schema.rs  traits.rs
src/models/: api_usage_log.rs  app_setting.rs  category.rs  entry.rs  entry_link.rs  entry_relation.rs  entry_type.rs  idea_note.rs  mod.rs  project.rs  tag_schema.rs
tests/: average_stress_test.rs  db.rs  snapshot.rs  sqlite_uuid_storage.rs  stress_test.rs  stress_test_pg.rs
