[package]
name = "worldflow_core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "json", "macros", "uuid"], optional = false }
uuid = { version = "1", features = ["serde", "v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sysinfo = "0"
git2 = "0.20"
csv = "1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["sqlite"]
sqlite   = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]