[package]
name = "worldflow_core"
version = "0.1.3"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "json", "macros", "migrate", "uuid"], optional = false }
uuid = { version = "1", features = ["serde", "v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sysinfo = "0"
git2 = { version = "0.20", default-features = false, optional = true }
csv = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "average_stress_test"
harness = false

[features]
default = ["sqlite", "snapshot"]
sqlite = ["sqlx/sqlite"]
snapshot = ["dep:git2"]
